Fourth draft
1. URLs replaced with URIs to avoid 'equals' accessing network for DNS
request;
2. unacceptable URIs like doc, rtf, pdf skipped for fetching;
3. resulting set of links sorted by distance from root;
4. URI's fragment doesn't participate in comparison.